Redid the form a bit

--- a/form.html
+++ b/form.html
@@ -22,12 +22,12 @@
 <main>
 
 <h3>User login</h3>
-<input type="First name" placeholder="First Name"><input type="LastName" placeholder="Last name"><button>Reset</button><button>Sign in</button>
+<input type="text" placeholder="First Name"><input type="text" placeholder="Last name"><button>Reset</button><button>Sign in</button>
 
 </main>
 
 <footer>
-    <span>&copy 1988-2021 Billy Rösehag.</span>
+    <span>& 1988-2021 Billy Rösehag.</span>
 </footer>
 
 </body>
