Redid the copyright symbol

--- a/form.html
+++ b/form.html
@@ -27,7 +27,7 @@
 </main>
 
 <footer>
-    <span>& 1988-2021 Billy Rösehag.</span>
+    <span>&copy 1988-2021 Billy Rösehag.</span>
 </footer>
 
 </body>
