--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </aside>
 
     <footer>
-        <span>& 1988-2021 Billy Rösehag.</span>
+        <span>&copy 1988-2021 Billy Rösehag.</span>
     </footer>
 
 </body>
