Forgot to add them into the commit

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </aside>
 
     <footer>
-        <span>&copy 1988-2021 Billy Rösehag.</span>
+        <span>&copy; 1988-2021 Billy Rösehag.</span>
     </footer>
 
 </body>
