Started working on a CSS style for the index and the form

--- a/form.html
+++ b/form.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form | First Assignment</title>
+
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -13,7 +15,7 @@
             <ul>
                 <li class="nav-element"><a href="/">HOME</a></li>
                 <li class="nav-element"><a href="/">CONTRACT</a></li>
-                <li class="nav-element"><a href="https://validator.w3.org/">PAGE VALIDATOR</a></li>
+                <li class="nav-element"><a href="https://validator.w3.org/">VALIDATOR</a></li>
             </ul>
             <a href="index.html">Index</a>
         </nav>
@@ -21,7 +23,7 @@
 
 <main>
 
-<h3>User login</h3>
+<h2>USER LOGIN</h2>
 <input type="text" placeholder="First Name"><input type="text" placeholder="Last name"><button>Reset</button><button>Sign in</button>
 
 </main>
