Continued working on the style of the form as well as a few new additions to the index page

--- a/form.html
+++ b/form.html
@@ -14,18 +14,26 @@
             <h1>BILLYS CONTRIBUTION</h1>
             <ul>
                 <li class="nav-element"><a href="/">HOME</a></li>
-                <li class="nav-element"><a href="/">CONTRACT</a></li>
+                <li class="nav-element"><a href="/">CONTACT</a></li>
                 <li class="nav-element"><a href="https://validator.w3.org/">VALIDATOR</a></li>
             </ul>
+
+            <div>
+
+            </div>
             <a href="index.html">Index</a>
         </nav>
     </header>
 
+    
 <main>
+    <h2>USER LOGIN</h2>
 
-<h2>USER LOGIN</h2>
-<input type="text" placeholder="First Name"><input type="text" placeholder="Last name"><button>Reset</button><button>Sign in</button>
+<form action="index.html">
 
+<input type="text" placeholder="User name"><input type="password" placeholder="Password"><button type="reset">Reset</button><button type="submit">Sign in</button>
+
+</form>
 </main>
 
 <footer>
