--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h1>BILLYS CONTRIBUTION</h1>
                 <ul>
                     <li class="nav-element"><a href="/">HOME</a></li>
-                    <li class="nav-element"><a href="/">CONTRACT</a></li>
+                    <li class="nav-element"><a href="/">CONTACT</a></li>
                     <li class="nav-element"><a href="https://validator.w3.org/">VALIDATOR</a></li>
                 </ul>
                 <div>
